--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -605,10 +605,11 @@
     <string name="service_pen">Pen application</string>
     <string name="service_tea">Tea application</string>
     <string name="service_mineralWater">Mineral water application</string>
-    <string name="no_data_download">无文件可下载</string>
-    <string name="file_download">文件下载</string>
+    <string name="no_data_download">No file to download</string>
+    <string name="file_download">file download</string>
     <string name="id">ID</string>
-    <string name="please_choose_file_first">请先选择文件</string>
+    <string name="please_choose_file_first">Please select file first</string>
+    <string name="delete_check_in_record">Delete check in record</string>
 
     <string-array name="role_spinner">
         <item>Not set</item>
