--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Paperless conference system</string>
+<!--    <string name="app_name">Paperless conference system</string>-->
+    <string name="app_name">Conference Seats</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
