--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">无纸化会议系统</string>
+<!--    <string name="app_name">无纸化会议系统</string>-->
+    <string name="app_name">会议席位</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
